--- a/player3.html
+++ b/player3.html
@@ -2,16 +2,14 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ดูบอลสด - Responsive</title>
+  <title>ดูบอลสด - พร้อมโลโก้ช่อง</title>
   <style>
     body {
       background-color: #000;
       color: #fff;
       font-family: sans-serif;
-      margin: 0;
+      text-align: center;
       padding: 20px;
-      box-sizing: border-box;
     }
 
     video {
@@ -20,185 +18,143 @@
       height: auto;
       border: 4px solid #00d8ff;
       border-radius: 12px;
-      display: block;
-      margin: 0 auto;
     }
 
     #current-logo {
-      text-align: center;
-      margin: 20px 0;
+      margin-top: 20px;
     }
 
-    #channel-logo {
-      width: 140px;
+    #current-logo img {
+      width: 150px;
       height: auto;
       object-fit: contain;
       border-radius: 10px;
     }
 
     h1 {
-      text-align: center;
-      font-size: 1.5em;
       margin: 30px 0 10px;
     }
 
     .channel-list {
       display: flex;
-      flex-wrap: wrap;
       justify-content: center;
-      gap: 16px;
-      padding: 10px;
+      gap: 20px;
+      margin-top: 10px;
+      flex-wrap: wrap;
     }
 
     .channel {
       cursor: pointer;
-      width: 120px;
-      text-align: center;
       transition: transform 0.2s;
     }
 
     .channel:hover {
-      transform: scale(1.05);
+      transform: scale(1.1);
     }
 
     .channel img {
-      width: 100%;
+      width: 100px;
       height: 100px;
       object-fit: contain;
       border-radius: 12px;
       border: 2px solid #00d8ff;
-      background: #111;
     }
 
     .channel p {
-      margin-top: 6px;
-      font-size: 0.9em;
-    }
-
-    /* Responsive บนมือถือ */
-    @media (max-width: 600px) {
-      .channel {
-        width: 45%;
-      }
-
-      h1 {
-        font-size: 1.2em;
-      }
-
-      #channel-logo {
-        width: 100px;
-      }
-    }
-
-    @media (max-width: 400px) {
-      .channel {
-        width: 100%;
-      }
-
-      video {
-        border-width: 2px;
-      }
+      margin-top: 8px;
     }
   </style>
 </head>
 <body>
 
+  <!-- วิดีโอ -->
   <video id="video" controls autoplay></video>
 
+  <!-- โลโก้ช่อง -->
   <div id="current-logo">
-    <img id="channel-logo" src="" alt="โลโก้ช่อง">
+    <img id="channel-logo" src="" alt="" />
   </div>
 
+  <!-- ย้ายมาด้านล่าง -->
   <h1>📺 เลือกช่องดูบอลสด</h1>
 
   <div class="channel-list">
-    <!-- ตัวอย่างช่อง -->
-    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_epl1/index.fmp4.m3u8"
-         data-logo="https://cms.dmpcdn.com/livetv/2022/01/12/24712c40-7374-11ec-91d2-797a50c5a656_webp_320.png">
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_epl1/index.fmp4.m3u8" data-logo="https://cms.dmpcdn.com/livetv/2022/01/12/24712c40-7374-11ec-91d2-797a50c5a656_webp_320.png">
       <img src="https://cms.dmpcdn.com/livetv/2022/01/12/24712c40-7374-11ec-91d2-797a50c5a656_webp_320.png" alt="EPL 1">
       <p>EPL 1</p>
     </div>
 
-    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_epl2/index.fmp4.m3u8" 
-         data-logo="https://cms.dmpcdn.com/livetv/2023/05/03/ba4c4510-e966-11ed-896e-69ce273284a6_webp_original.webp">
-        <img src="https://cms.dmpcdn.com/livetv/2023/05/03/ba4c4510-e966-11ed-896e-69ce273284a6_webp_original.webp" alt="EPL 2">
-        <p>EPL 2</p>
-      </div>
-  
-      <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_epl3/index.fmp4.m3u8" 
-           data-logo="https://cms.dmpcdn.com/livetv/2023/05/03/baf9ea30-e966-11ed-a3d3-f3f98ac7a1a1_webp_original.webp">
-        <img src="https://cms.dmpcdn.com/livetv/2023/05/03/baf9ea30-e966-11ed-a3d3-f3f98ac7a1a1_webp_original.webp" alt="EPL 3">
-        <p>EPL 3</p>
-      </div>
-  
-      <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_epl4/index.fmp4.m3u8" 
-           data-logo="https://cms.dmpcdn.com/livetv/2023/05/03/bb0beb90-e966-11ed-993c-b59183950f79_webp_original.webp">
-        <img src="https://cms.dmpcdn.com/livetv/2023/05/03/bb0beb90-e966-11ed-993c-b59183950f79_webp_original.webp" alt="EPL 4">
-        <p>EPL 4</p>
-      </div>
-  
-      <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_epl5/index.fmp4.m3u8" 
-           data-logo="https://cms.dmpcdn.com/livetv/2023/05/03/bbea1690-e966-11ed-935b-df134f58d288_webp_original.webp">
-        <img src="https://cms.dmpcdn.com/livetv/2023/05/03/bbea1690-e966-11ed-935b-df134f58d288_webp_original.webp" alt="EPL 5">
-        <p>EPL 5</p>
-      </div>
-  
-      <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_ts1/index.fmp4.m3u8" 
-           data-logo="https://www.lyngsat.com/logo/tv/tt/true-sports-1-th.png">
-        <img src="https://www.lyngsat.com/logo/tv/tt/true-sports-1-th.png" alt="True Sport 1">
-        <p>True Sport 1</p>
-      </div>
-  
-      <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_ts2/index.fmp4.m3u8" 
-           data-logo="https://www.lyngsat.com/logo/tv/tt/true-sports-2-th.png">
-        <img src="https://www.lyngsat.com/logo/tv/tt/true-sports-2-th.png" alt="True Sport 2">
-        <p>True Sport 2</p>
-      </div>
-  
-      <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_ts3/index.fmp4.m3u8" 
-           data-logo="https://www.lyngsat.com/logo/tv/tt/true-sports-3-th.png">
-        <img src="https://www.lyngsat.com/logo/tv/tt/true-sports-3-th.png" alt="True Sport 3">
-        <p>True Sport 3</p>
-      </div>
-  
-      <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_ts4/index.fmp4.m3u8" 
-           data-logo="https://www.lyngsat.com/logo/tv/tt/true-sports-4-th.png">
-        <img src="https://www.lyngsat.com/logo/tv/tt/true-sports-4-th.png" alt="True Sport 4">
-        <p>True Sport 4</p>
-      </div>
-  
-      <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_ts5/index.fmp4.m3u8" 
-           data-logo="https://www.lyngsat.com/logo/tv/tt/true-sports-5-th.png">
-        <img src="https://www.lyngsat.com/logo/tv/tt/true-sports-5-th.png" alt="True Sport 5">
-        <p>True Sport 5</p>
-      </div>
-  
-      <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_ts7/index.fmp4.m3u8" 
-           data-logo="https://www.lyngsat.com/logo/tv/tt/true-sports-7-th.png">
-        <img src="https://www.lyngsat.com/logo/tv/tt/true-sports-7-th.png" alt="True Sport 1">
-        <p>True Sport 7</p>
-      </div>
-  
-      <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_bein1/index.fmp4.m3u8" 
-           data-logo="https://www.lyngsat.com/logo/tv/bb/bein-sports-1-qa-fr.png">
-        <img src="https://www.lyngsat.com/logo/tv/bb/bein-sports-1-qa-fr.png" alt="bein 1">
-        <p>bein 1</p>
-      </div>
-  
-      <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_bein2/index.fmp4.m3u8" 
-           data-logo="https://www.lyngsat.com/logo/tv/bb/bein-sports-2-qa-fr.png">
-        <img src="https://www.lyngsat.com/logo/tv/bb/bein-sports-1-qa-fr.png" alt="bein 2">
-        <p>bein 2</p>
-      </div>
-  
-      <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_bein3/index.fmp4.m3u8" 
-           data-logo="https://www.lyngsat.com/logo/tv/bb/bein-sports-3-qa-fr.png">
-        <img src="https://www.lyngsat.com/logo/tv/bb/bein-sports-1-qa-fr.png" alt="bein 3">
-        <p>bein 3</p>
-      </div>
-  
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_epl2/index.fmp4.m3u8" data-logo="https://cms.dmpcdn.com/livetv/2023/05/03/ba4c4510-e966-11ed-896e-69ce273284a6_webp_original.webp">
+      <img src="https://cms.dmpcdn.com/livetv/2023/05/03/ba4c4510-e966-11ed-896e-69ce273284a6_webp_original.webp" alt="EPL 2">
+      <p>EPL 2</p>
+    </div>
 
-    <!-- เพิ่มช่องอื่น ๆ เหมือนตัวอย่างด้านบน -->
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_epl3/index.fmp4.m3u8" data-logo="https://cms.dmpcdn.com/livetv/2023/05/03/baf9ea30-e966-11ed-a3d3-f3f98ac7a1a1_webp_original.webp">
+      <img src="https://cms.dmpcdn.com/livetv/2023/05/03/baf9ea30-e966-11ed-a3d3-f3f98ac7a1a1_webp_original.webp" alt="EPL 3">
+      <p>EPL 3</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_epl4/index.fmp4.m3u8" data-logo="https://cms.dmpcdn.com/livetv/2023/05/03/bb0beb90-e966-11ed-993c-b59183950f79_webp_original.webp">
+      <img src="https://cms.dmpcdn.com/livetv/2023/05/03/bb0beb90-e966-11ed-993c-b59183950f79_webp_original.webp" alt="EPL 4">
+      <p>EPL 4</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_epl5/index.fmp4.m3u8" data-logo="https://cms.dmpcdn.com/livetv/2023/05/03/bbea1690-e966-11ed-935b-df134f58d288_webp_original.webp">
+      <img src="https://cms.dmpcdn.com/livetv/2023/05/03/bbea1690-e966-11ed-935b-df134f58d288_webp_original.webp" alt="EPL 5">
+      <p>EPL 5</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_ts1/index.fmp4.m3u8" data-logo="https://www.lyngsat.com/logo/tv/tt/true-sports-1-th.png">
+      <img src="https://www.lyngsat.com/logo/tv/tt/true-sports-1-th.png" alt="True Sport 1">
+      <p>True Sport 1</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_ts2/index.fmp4.m3u8" data-logo="https://www.lyngsat.com/logo/tv/tt/true-sports-2-th.png">
+      <img src="https://www.lyngsat.com/logo/tv/tt/true-sports-2-th.png" alt="True Sport 2">
+      <p>True Sport 2</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_ts3/index.fmp4.m3u8" data-logo="https://www.lyngsat.com/logo/tv/tt/true-sports-3-th.png">
+      <img src="https://www.lyngsat.com/logo/tv/tt/true-sports-3-th.png" alt="True Sport 3">
+      <p>True Sport 3</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_ts4/index.fmp4.m3u8" data-logo="https://www.lyngsat.com/logo/tv/tt/true-sports-4-th.png">
+      <img src="https://www.lyngsat.com/logo/tv/tt/true-sports-4-th.png" alt="True Sport 4">
+      <p>True Sport 4</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_ts5/index.fmp4.m3u8" data-logo="https://www.lyngsat.com/logo/tv/tt/true-sports-5-th.png">
+      <img src="https://www.lyngsat.com/logo/tv/tt/true-sports-5-th.png" alt="True Sport 5">
+      <p>True Sport 5</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_ts7/index.fmp4.m3u8" data-logo="https://www.lyngsat.com/logo/tv/tt/true-sports-7-th.png">
+      <img src="https://www.lyngsat.com/logo/tv/tt/true-sports-7-th.png" alt="True Sport 1">
+      <p>True Sport 7</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_bein1/index.fmp4.m3u8" data-logo="https://www.lyngsat.com/logo/tv/bb/bein-sports-1-qa-fr.png">
+      <img src="https://www.lyngsat.com/logo/tv/bb/bein-sports-1-qa-fr.png" alt="bein 1">
+      <p>bein 1</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_bein2/index.fmp4.m3u8" data-logo="https://www.lyngsat.com/logo/tv/bb/bein-sports-2-qa-fr.png">
+      <img src="https://www.lyngsat.com/logo/tv/bb/bein-sports-1-qa-fr.png" alt="bein 2">
+      <p>bein 2</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_bein3/index.fmp4.m3u8" data-logo="https://www.lyngsat.com/logo/tv/bb/bein-sports-3-qa-fr.png">
+      <img src="https://www.lyngsat.com/logo/tv/bb/bein-sports-1-qa-fr.png" alt="bein 3">
+      <p>bein 3</p>
+    </div>
+
+
+
+
+
+
+    <!-- (ช่องอื่น ๆ ยังคงรูปแบบเดียวกัน เพิ่ม data-logo ด้วย) -->
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
@@ -232,10 +188,211 @@
       });
     });
 
-    // เริ่มต้นด้วยช่องแรก
+    // เริ่มต้นเล่นช่องแรก
+    const firstChannel = channels[0];
+    playChannel(firstChannel.getAttribute('data-src'), firstChannel.getAttribute('data-logo'));
+  </script>
+<!DOCTYPE html>
+<html lang="th">
+<head>
+  <meta charset="UTF-8">
+  <title>ดูบอลสด - พร้อมโลโก้ช่อง</title>
+  <style>
+    body {
+      background-color: #000;
+      color: #fff;
+      font-family: sans-serif;
+      text-align: center;
+      padding: 20px;
+    }
+
+    video {
+      width: 100%;
+      max-width: 800px;
+      height: auto;
+      border: 4px solid #00d8ff;
+      border-radius: 12px;
+    }
+
+    #current-logo {
+      margin-top: 20px;
+    }
+
+    #current-logo img {
+      width: 150px;
+      height: auto;
+      object-fit: contain;
+      border-radius: 10px;
+    }
+
+    h1 {
+      margin: 30px 0 10px;
+    }
+
+    .channel-list {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 10px;
+      flex-wrap: wrap;
+    }
+
+    .channel {
+      cursor: pointer;
+      transition: transform 0.2s;
+    }
+
+    .channel:hover {
+      transform: scale(1.1);
+    }
+
+    .channel img {
+      width: 100px;
+      height: 100px;
+      object-fit: contain;
+      border-radius: 12px;
+      border: 2px solid #00d8ff;
+    }
+
+    .channel p {
+      margin-top: 8px;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- วิดีโอ -->
+  <video id="video" controls autoplay></video>
+
+  <!-- โลโก้ช่อง -->
+  <div id="current-logo">
+    <img id="channel-logo" src="" alt="" />
+  </div>
+
+  <!-- ย้ายมาด้านล่าง -->
+  <h1>📺 เลือกช่องดูบอลสด</h1>
+
+  <div class="channel-list">
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_epl1/index.fmp4.m3u8" data-logo="https://cms.dmpcdn.com/livetv/2022/01/12/24712c40-7374-11ec-91d2-797a50c5a656_webp_320.png">
+      <img src="https://cms.dmpcdn.com/livetv/2022/01/12/24712c40-7374-11ec-91d2-797a50c5a656_webp_320.png" alt="EPL 1">
+      <p>EPL 1</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_epl2/index.fmp4.m3u8" data-logo="https://cms.dmpcdn.com/livetv/2023/05/03/ba4c4510-e966-11ed-896e-69ce273284a6_webp_original.webp">
+      <img src="https://cms.dmpcdn.com/livetv/2023/05/03/ba4c4510-e966-11ed-896e-69ce273284a6_webp_original.webp" alt="EPL 2">
+      <p>EPL 2</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_epl3/index.fmp4.m3u8" data-logo="https://cms.dmpcdn.com/livetv/2023/05/03/baf9ea30-e966-11ed-a3d3-f3f98ac7a1a1_webp_original.webp">
+      <img src="https://cms.dmpcdn.com/livetv/2023/05/03/baf9ea30-e966-11ed-a3d3-f3f98ac7a1a1_webp_original.webp" alt="EPL 3">
+      <p>EPL 3</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_epl4/index.fmp4.m3u8" data-logo="https://cms.dmpcdn.com/livetv/2023/05/03/bb0beb90-e966-11ed-993c-b59183950f79_webp_original.webp">
+      <img src="https://cms.dmpcdn.com/livetv/2023/05/03/bb0beb90-e966-11ed-993c-b59183950f79_webp_original.webp" alt="EPL 4">
+      <p>EPL 4</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_epl5/index.fmp4.m3u8" data-logo="https://cms.dmpcdn.com/livetv/2023/05/03/bbea1690-e966-11ed-935b-df134f58d288_webp_original.webp">
+      <img src="https://cms.dmpcdn.com/livetv/2023/05/03/bbea1690-e966-11ed-935b-df134f58d288_webp_original.webp" alt="EPL 5">
+      <p>EPL 5</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_ts1/index.fmp4.m3u8" data-logo="https://www.lyngsat.com/logo/tv/tt/true-sports-1-th.png">
+      <img src="https://www.lyngsat.com/logo/tv/tt/true-sports-1-th.png" alt="True Sport 1">
+      <p>True Sport 1</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_ts2/index.fmp4.m3u8" data-logo="https://www.lyngsat.com/logo/tv/tt/true-sports-2-th.png">
+      <img src="https://www.lyngsat.com/logo/tv/tt/true-sports-2-th.png" alt="True Sport 2">
+      <p>True Sport 2</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_ts3/index.fmp4.m3u8" data-logo="https://www.lyngsat.com/logo/tv/tt/true-sports-3-th.png">
+      <img src="https://www.lyngsat.com/logo/tv/tt/true-sports-3-th.png" alt="True Sport 3">
+      <p>True Sport 3</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_ts4/index.fmp4.m3u8" data-logo="https://www.lyngsat.com/logo/tv/tt/true-sports-4-th.png">
+      <img src="https://www.lyngsat.com/logo/tv/tt/true-sports-4-th.png" alt="True Sport 4">
+      <p>True Sport 4</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_ts5/index.fmp4.m3u8" data-logo="https://www.lyngsat.com/logo/tv/tt/true-sports-5-th.png">
+      <img src="https://www.lyngsat.com/logo/tv/tt/true-sports-5-th.png" alt="True Sport 5">
+      <p>True Sport 5</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_ts7/index.fmp4.m3u8" data-logo="https://www.lyngsat.com/logo/tv/tt/true-sports-7-th.png">
+      <img src="https://www.lyngsat.com/logo/tv/tt/true-sports-7-th.png" alt="True Sport 1">
+      <p>True Sport 7</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_bein1/index.fmp4.m3u8" data-logo="https://www.lyngsat.com/logo/tv/bb/bein-sports-1-qa-fr.png">
+      <img src="https://www.lyngsat.com/logo/tv/bb/bein-sports-1-qa-fr.png" alt="bein 1">
+      <p>bein 1</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_bein2/index.fmp4.m3u8" data-logo="https://www.lyngsat.com/logo/tv/bb/bein-sports-2-qa-fr.png">
+      <img src="https://www.lyngsat.com/logo/tv/bb/bein-sports-1-qa-fr.png" alt="bein 2">
+      <p>bein 2</p>
+    </div>
+
+    <div class="channel" data-src="http://moo7-restream2025.ddns.net:9091/Sport_tv_bein3/index.fmp4.m3u8" data-logo="https://www.lyngsat.com/logo/tv/bb/bein-sports-3-qa-fr.png">
+      <img src="https://www.lyngsat.com/logo/tv/bb/bein-sports-1-qa-fr.png" alt="bein 3">
+      <p>bein 3</p>
+    </div>
+
+
+
+
+
+
+    <!-- (ช่องอื่น ๆ ยังคงรูปแบบเดียวกัน เพิ่ม data-logo ด้วย) -->
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <script>
+    const video = document.getElementById('video');
+    const channels = document.querySelectorAll('.channel');
+    const logo = document.getElementById('channel-logo');
+    let hls;
+
+    function playChannel(src, logoUrl) {
+      if (hls) hls.destroy();
+
+      if (Hls.isSupported()) {
+        hls = new Hls();
+        hls.loadSource(src);
+        hls.attachMedia(video);
+      } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
+        video.src = src;
+      } else {
+        alert("เบราว์เซอร์ของคุณไม่รองรับ HLS");
+      }
+
+      logo.src = logoUrl;
+    }
+
+    channels.forEach(channel => {
+      channel.addEventListener('click', () => {
+        const src = channel.getAttribute('data-src');
+        const logoUrl = channel.getAttribute('data-logo');
+        playChannel(src, logoUrl);
+      });
+    });
+
+    // เริ่มต้นเล่นช่องแรก
     const firstChannel = channels[0];
     playChannel(firstChannel.getAttribute('data-src'), firstChannel.getAttribute('data-logo'));
   </script>
 
 </body>
 </html>
+
+
+
+</body>
+</html>
+
+
